WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275516
IPC decoding fails for some extension API message replies
https://bugs.webkit.org/show_bug.cgi?id=275516
Summary
IPC decoding fails for some extension API message replies
Kiara Rose
Reported
2024-06-14 15:21:38 PDT
rdar://129546020
Attachments
Add attachment
proposed patch, testcase, etc.
Kiara Rose
Comment 1
2024-06-14 15:42:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29846
EWS
Comment 2
2024-06-14 18:09:57 PDT
Committed
280048@main
(1ec49c531096): <
https://commits.webkit.org/280048@main
> Reviewed commits have been landed. Closing PR #29846 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug